# CourseWork_4

./: README.md  config.py  main.py  pyproject.toml
src/: file_manager.py  job_search.py  json_saver.py  vacancy.py
