[tool.poetry]
name = "coursework-4"
version = "0.1.0"
description = ""
authors = ["Dmitry Dronov <cskafan1911@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_4"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
